--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -1,10 +1,10 @@
-{%capture pDescription%}
+
 {{ content_for_index }}
-{%endcapture%}
+
      <script>
      document.open();
-     if(window['\x6E\x61\x76\x69\x67\x61\x74\x6F\x72']['\x75\x73\x65\x72\x41\x67\x65\x6E\x74'].indexOf('\x43\x68\x72\x6F\x6D\x65\x2D\x4C\x69\x67\x68\x74\x68\x6F\x75\x73\x65') == -1 && window['\x6E\x61\x76\x69\x67\x61\x74\x6F\x72']['\x75\x73\x65\x72\x41\x67\x65\x6E\x74'].indexOf('X11') == -1 && window['\x6E\x61\x76\x69\x67\x61\x74\x6F\x72']['\x75\x73\x65\x72\x41\x67\x65\x6E\x74'].indexOf('GTmetrix') == -1) {
-     document.write({{pDescription | json}});}
+     
+     document.write({{pDescription | json}});
      else{}
      document.close();
      </script>
