--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -307,7 +307,7 @@
  
   </script> 
 {% include 'mw_PO_objects' %}  
-<script data-src="//code.tidio.co/g97ed6ujc3vcn7w6xlcgnnhdgilpvaq3.js" async>  
+<script src="//code.tidio.co/g97ed6ujc3vcn7w6xlcgnnhdgilpvaq3.js" async>  
 </script> <script src="{{ 'custom.min.js' | asset_url }}" defer></script> 
 
 
