--- a/snippets/spinstudio-init.liquid
+++ b/snippets/spinstudio-init.liquid
@@ -4,7 +4,7 @@
   <meta id="spinstudio_images" content="{% for image in product.images %}{{ image.src | img_url: 'original', scale: 2 }}{% unless forloop.last %}:@:{% endunless %}{% endfor %}" />
   <meta id="spinstudio_alt" content="{% for image in product.images %}{{ image.alt | escape  }}{% unless forloop.last %}:@:{% endunless %}{% endfor %}" />
   <meta id="spinstudio_product_id" content="{{ product.id }}" />
-  <script type="text/javascript">
+  <script type="lazyload2">
     var evImgs = document.querySelectorAll("img[alt=\'3D\']");
     for( var i = 0; i < evImgs.length; i++ ) evImgs[i].style.opacity = 0;
   </script>
