--- a/sections/home-slider.liquid
+++ b/sections/home-slider.liquid
@@ -3,8 +3,8 @@
     <div class="slide_box">
       {% if block.settings.link != blank %}
       <a href="{{ block.settings.link }}">
-        <img class="desk_img" src="{{ block.settings.desktop_image | img_url: 'master' }}" alt="">
-        <img class="mobile_img" src="{{ block.settings.mobile_image | img_url: 'master' }}" alt="">
+        <img class="desk_img lazy2" data-src="{{ block.settings.desktop_image | img_url: 'master' }}" alt="">
+        <img class="mobile_img lazy2" data-src="{{ block.settings.mobile_image | img_url: 'master' }}" alt="">
       </a>
       {% endif %}
     </div>
