--- a/sections/about-section.liquid
+++ b/sections/about-section.liquid
@@ -3,15 +3,15 @@
     <div class="img_block">
       <div class="two_img coman_img">
         {%- if section.settings.image01 != blank -%}
-        <img class="lazyload" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="{{ section.settings.image01 | img_url: '800x' }}" alt="">
+        <img  class="lazyload lazy2" data-src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="{{ section.settings.image01 | img_url: '800x' }}" alt="">
         {%- endif -%}
         {%- if section.settings.image02 != blank -%}
-        <img class="lazyload" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="{{ section.settings.image02 | img_url: '800x' }}" alt="">
+        <img  class="lazyload lazy2" data-src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="{{ section.settings.image02 | img_url: '800x' }}" alt="">
         {%- endif -%}  
       </div>
       <div class="one_img coman_img">
         {%- if section.settings.image03 != blank -%}
-        <img class="lazyload" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="{{ section.settings.image03 | img_url: '800x' }}" alt="">
+        <img  class="lazyload lazy2" data-src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="{{ section.settings.image03 | img_url: '800x' }}" alt="">
         {%- endif -%}  
       </div>
     </div>
@@ -27,10 +27,10 @@
       </div>
       <div class="two_img coman_img">
         {%- if section.settings.image04 != blank -%}
-        <img class="lazyload" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="{{ section.settings.image04 | img_url: '800x' }}" alt="">
+        <img  class="lazyload lazy2" data-src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="{{ section.settings.image04 | img_url: '800x' }}" alt="">
         {%- endif -%}  
         {%- if section.settings.image05 != blank -%}
-        <img class="lazyload" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="{{ section.settings.image05 | img_url: '800x' }}" alt="">
+        <img  class="lazyload lazy2" data-src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="{{ section.settings.image05 | img_url: '800x' }}" alt="">
         {%- endif -%}  
       </div>
     </div>
@@ -52,7 +52,7 @@
     {%- if section.settings.image06 != blank -%}
     <div class="img_block">
       <div class="one_img coman_img">
-        <img class="lazyload" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="{{ section.settings.image06 | img_url: '800x' }}" alt="">
+        <img  class="lazyload lazy2" data-src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="{{ section.settings.image06 | img_url: '800x' }}" alt="">
       </div>
     </div>
     {%- endif -%}  
