--- a/sections/about-section.liquid
+++ b/sections/about-section.liquid
@@ -52,7 +52,7 @@
     {%- if section.settings.image06 != blank -%}
     <div class="img_block">
       <div class="one_img coman_img">
-        <img  class="lazyload lazy2" data-src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="{{ section.settings.image06 | img_url: '800x' }}" alt="">
+        <img width="100%" height="100%" class="lazyload lazy2" data-src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="{{ section.settings.image06 | img_url: '800x' }}" alt="">
       </div>
     </div>
     {%- endif -%}  
