--- a/sections/categories_section.liquid
+++ b/sections/categories_section.liquid
@@ -9,7 +9,7 @@
   {% for block in section.blocks %}
     <div class="categories_box">
       	{% if block.settings.image != blank %}
-      		<div class="cate_img"><img width="100%" height="100%" class="lazy2" data-src="{{ block.settings.image | img_url: '600x' }}" alt=""></div>
+      		<div class="cate_img"><img src="{{ block.settings.image | img_url: '600x' }}" alt=""></div>
         {% endif %}
         <div class="categories_details">
           {% if block.settings.cta_label != blank %}
