--- a/sections/home-slider.liquid
+++ b/sections/home-slider.liquid
@@ -4,7 +4,7 @@
       {% if block.settings.link != blank %}
       <a href="{{ block.settings.link }}">
         <img class="desk_img lazy2" data-src="{{ block.settings.desktop_image | img_url: 'master' }}" alt="">
-        <img class="mobile_img lazy2" data-src="{{ block.settings.mobile_image | img_url: 'master' }}" alt="">
+        <img width="100%" height="100%" class="mobile_img lazy2" data-src="{{ block.settings.mobile_image | img_url: 'master' }}" alt="">
       </a>
       {% endif %}
     </div>
