--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -162,7 +162,7 @@
 
 
 <link data-href="{{ 'fonts-load.css' | asset_url }}" rel="stylesheet" type="text/css" media="all" />  
-  } <style>
+   <style>
     {{ header_font | font_face: font_display: 'swap' }}
     {{ base_font | font_face: font_display: 'swap' }}
     {{ base_font_bold | font_face: font_display: 'swap' }}
@@ -232,7 +232,7 @@
   {%- if request.page_type contains 'customers/' -%}
     <script type="lazyload2" data-src="{{ 'shopify_common.js' | shopify_asset_url }}" defer="defer"></script>
   {%- endif -%}
-  <script type="lazyload2" data-src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
   <script type="lazyload2" data-src="{{ 'theme.js' | asset_url }}" defer="defer"></script>
   <script type="lazyload2" data-src="{{ 'lazysizes.js' | asset_url }}" async="async"></script>
 
