--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -232,12 +232,12 @@
   {%- if request.page_type contains 'customers/' -%}
     <script type="lazyload2" data-src="{{ 'shopify_common.js' | shopify_asset_url }}" defer="defer"></script>
   {%- endif -%}
-  <script type="lazyload2" data-src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-  <script type="lazyload2" data-src="{{ 'theme.js' | asset_url }}" defer="defer"></script>
-  <script type="lazyload2" data-src="{{ 'lazysizes.js' | asset_url }}" async="async"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+  <script src="{{ 'theme.js' | asset_url }}" defer="defer"></script>
+  <script src="{{ 'lazysizes.js' | asset_url }}" async="async"></script>
 
 
-  <script type="lazyload2">
+  <script>
     if (window.MSInputMethodContext && document.documentMode) {
       var scripts = document.getElementsByTagName('script')[0];
       var polyfill = document.createElement("script");
