--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -234,7 +234,7 @@
   {%- endif -%}
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
   <script src="{{ 'theme.js' | asset_url }}" defer="defer"></script>
-  <script src="{{ 'lazysizes.js' | asset_url }}" async="async"></script>
+  <script type="lazyload2" data-src="{{ 'lazysizes.js' | asset_url }}" async="async"></script>
 
 
   <script type="lazyload2">
