--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -232,7 +232,7 @@
   {%- if request.page_type contains 'customers/' -%}
     <script type="lazyload2" data-src="{{ 'shopify_common.js' | shopify_asset_url }}" defer="defer"></script>
   {%- endif -%}
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+  <script type="lazyload2" data-src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
   <script src="{{ 'theme.js' | asset_url }}" defer="defer"></script>
   <script type="lazyload2" data-src="{{ 'lazysizes.js' | asset_url }}" async="async"></script>
 
