--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -77,7 +77,7 @@
             {%- assign img_url = section.settings.logo | img_url: '1x1' | replace: '_1x1.', '_{width}x.' -%}
             <a href="{{ routes.root_url }}" class="site-header__logo-image{% if section.settings.align_logo == 'center' %} site-header__logo-image--centered{% endif %}">
               {% capture logo_alt %}{{ section.settings.logo.alt | default: shop.name }}{% endcapture %}
-              <img width="100%" height="100%" class="lazyload js lazy2"
+              <img class="lazyload js"
                    data-src="{{ section.settings.logo | img_url: '300x300' }}"
                    data-src="{{ img_url }}"
                    data-widths="[180, 360, 540, 720, 900, 1080, 1296, 1512, 1728, 2048]"
