--- a/sections/overlap_categories_section.liquid
+++ b/sections/overlap_categories_section.liquid
@@ -24,7 +24,7 @@
     <div class="overlap_categories_box">
       <div class="overlap_categories_inner">
         {% if block.settings.image != blank %}
-        <div class="cate_img"><img width="100%" height="100%" class="lazy2" data-src="{{ block.settings.image | img_url: '600x' }}" alt=""></div>
+        <div class="cate_img"><img class="lazy2" data-src="{{ block.settings.image | img_url: '600x' }}" alt=""></div>
         {% endif %}
         <div class="categories_details">
           {% if block.settings.cta_label != blank %}
