--- a/sections/overlap_categories_section.liquid
+++ b/sections/overlap_categories_section.liquid
@@ -5,7 +5,7 @@
   <div class="overlap_details">
     <div class="page-width">
       {% if section.settings.image_icon != blank %}
-      	<div class="icon_img"><img width="100%" height="100%" class="lazy2" data-src="{{ section.settings.image_icon | img_url: '400x' }}" alt=""></div>
+      	<div class="icon_img"><img class="lazy2" data-src="{{ section.settings.image_icon | img_url: '400x' }}" alt=""></div>
       {% endif %}
       {% if section.settings.main_title != blank %}
       	<h3>{{ section.settings.main_title | escape }}</h3>
