--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -96,8 +96,8 @@
   <link rel="preload" href="{{ 'theme.js' | asset_url }}" as="script">
   <link rel="preload" href="{{ 'theme.css' | asset_url }}" as="style">
   <link rel="preload" href="{{ 'owl.carousel.css' | asset_url }}" as="style">
+  <link rel="preload" href="{{ 'fonts-load.css' | asset_url }}" as="style">
   
-  <!-- raja -->
 
   {%- if canonical_url != blank  -%}
     <link rel="canonical" href="{{ canonical_url }}">
