--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -176,7 +176,7 @@
     {{ base_font_italic | font_face: font_display: 'swap' }}
     {{ base_font_bold_italic | font_face: font_display: 'swap' }}
   </style>
-  <script>
+  <script type="lazyload2">
     var theme = {
       breakpoints: {
         medium: 750,
